feat(server): get asset ids
