# server/src/immich/api-v1/asset/asset-repository.ts
@@ -26,7 +26,6 @@ export interface IAssetRepository {
   ): Promise<AssetEntity>;
   remove(asset: AssetEntity): Promise<void>;
   getAllByUserId(userId: string, dto: AssetSearchDto): Promise<AssetEntity[]>;
-  getAllByDeviceId(userId: string, deviceId: string): Promise<string[]>;
   getById(assetId: string): Promise<AssetEntity>;
   getLocationsByUserId(userId: string): Promise<CuratedLocationsResponseDto[]>;
   getDetectedObjectsByUserId(userId: string): Promise<CuratedObjectsResponseDto[]>;
@@ -157,26 +156,6 @@ export class AssetRepository implements IAssetRepository {
 
   async remove(asset: AssetEntity): Promise<void> {
     await this.assetRepository.remove(asset);
-  }
-
-  /**
-   * Get assets by device's Id on the database
-   * @param ownerId
-   * @param deviceId
-   *
-   * @returns Promise<string[]> - Array of assetIds belong to the device
-   */
-  async getAllByDeviceId(ownerId: string, deviceId: string): Promise<string[]> {
-    const items = await this.assetRepository.find({
-      select: { deviceAssetId: true },
-      where: {
-        ownerId,
-        deviceId,
-        isVisible: true,
-      },
-    });
-
-    return items.map((asset) => asset.deviceAssetId);
   }
 
   /**
